# code-jam-10

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  dev-requirements.txt  gui.py  justfile  loadsave.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  test.txt  tox.ini
.github/workflows/: lint.yaml  tests.yaml  unittests.yaml
Tests/: test_double_exposure.py  test_hidden_in_ascii.py  test_pixelate_and_swap.py  test_xor.py
app/: __init__.py  byteutils.py  cli.py  steganography.py  ui.py
app/common/: __init__.py
app/obfuscate/: __init__.py  blur_box.py  find_boxes.py
app/steganography/: lsb.py  steganography.py
async-aggregators/: .pre-commit-config.yaml  pyproject.toml
async-aggregators/src/: control_panel.py  dock.py
itinerant-iterators/: justfile  requirements.txt  tox.ini
itinerant-iterators/app/: __init__.py  cli.py
itinerant-iterators/server/: find_bounds.py
itinerant-iterators/tests/: test_byteutils.py  (+2 more)
neverending-loops/: README.md  requirements.txt  tox.ini
piet/: common.py
samples/: Pipfile  pyproject.toml
server/: find_bounds.py  server_app.py
src/: Filter.py  Level.py  Window.py  backend.py  control_panel.py  decode.py  dock.py  encode.py  filter.py  gui.py  image_viewer.py  imagereader.py  level.py  loadsave.py  main.py  menu.py  modules.py  piet.py  pinterpret.py  test.py  test_pinterpret.py  tkgui.py  window.py
styles/: styles.css
tests/: test_byteutils.py  test_hidden_in_ascii.py  test_pixelate_and_swap.py  test_runtime.py  test_something.py
tools/: Pixelate.py
top-level-walruses/: .gitignore  LICENSE  requirements-dev.txt  requirements.txt
(+74 files in other folders)
