[tool.poetry]
name = "Name"
version = "0.1.0"
description = ""
authors = ["Author 1 <email@mail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10.*"

[tool.poetry.dev-dependencies]
# Base tools
arcade = "~2.6.17"
flake8 = "6.1.0"
flake8-docstrings = "1.7.0"
isort = "~5.12.0"
mypy = "~1.5.1"
numpy = "1.25.2"
opencv-python = "4.8.0.76"
Pillow = "9.3.0"
pre-commit = "~3.3.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"